# zshrcman

./: .gitignore  CLAUDE.md  Cargo.toml  PROFILE_FEATURES.md  README.md
ai-docs/alexp/: tech-stack.md  zshrcman-architecture.md
ai-docs/alexpalomin/: tech-stack.md
src/: main.rs  models.rs
src/modules/: alias.rs  config.rs  environment.rs  git_mgr.rs  init.rs  install.rs  mod.rs  profile_switcher.rs  state_manager.rs
src/tests/: profile_tests.rs
